Set up Firebase config

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Firebase Chat App</title>
+<!-- Firebase App (the core Firebase SDK) -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+
+<!-- If you're using other Firebase services (auth, firestore, etc.), add them too -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
+
 </head>
 <body>
   <h2>Hello from Firebase Chat!</h2>
   <script type="module" src="./main.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
+
 </body>
 </html>
