--- a/public/index.html
+++ b/public/index.html
@@ -1,136 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Firebase Single Page App (Login + Chat)</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Welcome to Firebase Hosting</title>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/11.6.1/firebase-app-compat.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src="/__/firebase/11.6.1/firebase-auth-compat.js"></script>
+    <script defer src="/__/firebase/11.6.1/firebase-database-compat.js"></script>
+    <script defer src="/__/firebase/11.6.1/firebase-firestore-compat.js"></script>
+    <script defer src="/__/firebase/11.6.1/firebase-functions-compat.js"></script>
+    <script defer src="/__/firebase/11.6.1/firebase-messaging-compat.js"></script>
+    <script defer src="/__/firebase/11.6.1/firebase-storage-compat.js"></script>
+    <script defer src="/__/firebase/11.6.1/firebase-analytics-compat.js"></script>
+    <script defer src="/__/firebase/11.6.1/firebase-remote-config-compat.js"></script>
+    <script defer src="/__/firebase/11.6.1/firebase-performance-compat.js"></script>
+    <!-- 
+      initialize the SDK after all desired features are loaded, set useEmulator to false
+      to avoid connecting the SDK to running emulators.
+    -->
+    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-  <style>
-    #chat-section, #loading { display: none; }
-  </style>
-</head>
-
-<body>
-  <h1>Firebase App</h1>
-
-  <!-- 🔵 Login Form -->
-  <div id="login-section">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <input type="email" id="email" placeholder="Enter Email" required />
-      <br><br>
-      <input type="password" id="password" placeholder="Enter Password" required />
-      <br><br>
-      <button type="submit">Login</button>
-    </form>
-    <p id="loginMessage"></p>
-  </div>
-
-  <!-- 🟣 Loading Spinner -->
-  <div id="loading">
-    <p>Loading...</p>
-  </div>
-
-  <!-- 🟢 Chat Section -->
-  <div id="chat-section">
-    <h2>Welcome <span id="user-email"></span>!</h2>
-    <button id="logoutBtn">Logout</button>
-    <hr>
-
-    <ul id="messages"></ul>
-    <input type="text" id="messageInput" placeholder="Type your message...">
-    <button id="sendBtn">Send</button>
-  </div>
-
-  <!-- ⚡ Firebase + App Script -->
-  <script>
-    // 🔥 Your Firebase Config
-    const firebaseConfig = {
-      apiKey: "AIzaSyDPeFVgGZHJYSfgKho3z0FKnMZfBx4sjeA",
-      authDomain: "fir-chat-app-66747.firebaseapp.com",
-      projectId: "fir-chat-app-66747",
-      storageBucket: "fir-chat-app-66747.appspot.com",
-      messagingSenderId: "768757302927",
-      appId: "1:768757302927:web:8ae5865d41442103f7d2fa",
-      measurementId: "G-FFBZW106SW"
-    };
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-
-    const loginSection = document.getElementById('login-section');
-    const chatSection = document.getElementById('chat-section');
-    const loading = document.getElementById('loading');
-    const loginForm = document.getElementById('loginForm');
-    const loginMessage = document.getElementById('loginMessage');
-    const userEmail = document.getElementById('user-email');
-
-    // 🔵 Login Form Submit
-    loginForm.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const email = loginForm.email.value;
-      const password = loginForm.password.value;
-
-      // Show loading
-      loginSection.style.display = 'none';
-      loading.style.display = 'block';
-
-      auth.signInWithEmailAndPassword(email, password)
-        .then((userCredential) => {
-          const user = userCredential.user;
-          loading.style.display = 'none';
-          chatSection.style.display = 'block';
-          userEmail.textContent = user.email;
-          listenForMessages();
-        })
-        .catch((error) => {
-          loading.style.display = 'none';
-          loginSection.style.display = 'block';
-          loginMessage.textContent = "Error: " + error.message;
-        });
-    });
-
-    // 🟢 Logout
-    document.getElementById('logoutBtn').addEventListener('click', () => {
-      auth.signOut().then(() => {
-        chatSection.style.display = 'none';
-        loginSection.style.display = 'block';
-      });
-    });
-
-    // 🟢 Send Message
-    document.getElementById('sendBtn').addEventListener('click', () => {
-      const msgInput = document.getElementById('messageInput');
-      const message = msgInput.value;
-      if (message.trim() !== "") {
-        db.collection('messages').add({
-          text: message,
-          createdAt: firebase.firestore.FieldValue.serverTimestamp(),
-          user: auth.currentUser.email
-        });
-        msgInput.value = '';
+    <style media="screen">
+      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
+      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
+      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
+      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
+      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
+      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
+      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
+      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
+      @media (max-width: 600px) {
+        body, #message { margin-top: 0; background: white; box-shadow: none; }
+        body { border-top: 16px solid #ffa100; }
       }
-    });
+    </style>
+  </head>
+  <body>
+    <div id="message">
+      <h2>Welcome</h2>
+      <h1>Firebase Hosting Setup Complete</h1>
+      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
+      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+    </div>
+    <p id="load">Firebase SDK Loading&hellip;</p>
 
-    // 🟢 Listen for Messages
-    function listenForMessages() {
-      db.collection('messages').orderBy('createdAt')
-        .onSnapshot((snapshot) => {
-          const messagesList = document.getElementById('messages');
-          messagesList.innerHTML = '';
-          snapshot.forEach((doc) => {
-            const li = document.createElement('li');
-            li.textContent = `${doc.data().user}: ${doc.data().text}`;
-            messagesList.appendChild(li);
-          });
-        });
-    }
-  </script>
-</body>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const loadEl = document.querySelector('#load');
+        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+        // // The Firebase SDK is initialized and available here!
+        //
+        // firebase.auth().onAuthStateChanged(user => { });
+        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
+        // firebase.firestore().doc('/foo/bar').get().then(() => { });
+        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
+        // firebase.messaging().requestPermission().then(() => { });
+        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
+        // firebase.analytics(); // call to activate
+        // firebase.analytics().logEvent('tutorial_completed');
+        // firebase.performance(); // call to activate
+        //
+        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+
+        try {
+          let app = firebase.app();
+          let features = [
+            'auth', 
+            'database', 
+            'firestore',
+            'functions',
+            'messaging', 
+            'storage', 
+            'analytics', 
+            'remoteConfig',
+            'performance',
+          ].filter(feature => typeof app[feature] === 'function');
+          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
+        } catch (e) {
+          console.error(e);
+          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+        }
+      });
+    </script>
+  </body>
 </html>
