--- a/public/chat.html
+++ b/public/chat.html
@@ -93,13 +93,14 @@
     import { getFirestore, collection, addDoc, query, orderBy, onSnapshot, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "AIzaSyDPeFVgGZHJYSfgKho3z0FKnMZfBx4sjeA",
-      authDomain: "fir-chat-app-66747.firebaseapp.com",
-      projectId: "fir-chat-app-66747",
-      storageBucket: "fir-chat-app-66747.appspot.com",
-      messagingSenderId: "768757302927",
-      appId: "1:768757302927:web:8ae5865d41442103f7d2fa",
-      measurementId: "G-FFBZW106SW"
+      apiKey: "AIzaSyA6WgJMH6PgA9lr-EMVUIMwISqhra97NpA",
+      authDomain: "chatapp-5efd4.firebaseapp.com",
+      databaseURL: "https://chatapp-5efd4-default-rtdb.firebaseio.com",
+      projectId: "chatapp-5efd4",
+      storageBucket: "chatapp-5efd4.appspot.com",
+      messagingSenderId: "920573589411",
+      appId: "1:920573589411:web:bc7b4f1c7b94cd9bfa8c16",
+      measurementId: "G-0P762496P1"
     };
 
     const app = initializeApp(firebaseConfig);
@@ -119,23 +120,37 @@
     });
 
     logoutButton.addEventListener('click', async () => {
-      await signOut(auth);
-      window.location.href = "index.html";
+      try {
+        await signOut(auth);
+        window.location.href = "index.html";
+      } catch (error) {
+        console.error("Error signing out:", error.message);
+      }
     });
 
     messageForm.addEventListener('submit', async (e) => {
       e.preventDefault();
       const text = messageInput.value.trim();
       if (text) {
-        await addDoc(collection(db, "messages"), {
-          text: text,
-          createdAt: serverTimestamp()
-        });
-        messageInput.value = '';
+        try {
+          await addDoc(collection(db, "messages"), {
+            text: text,
+            createdAt: serverTimestamp()
+          });
+          messageInput.value = '';
+        } catch (error) {
+          console.error("Error sending message:", error.message);
+        }
       }
     });
 
     const q = query(collection(db, "messages"), orderBy("createdAt", "asc"));
+
+    // Ensure Firestore rules allow access for testing
+    // Example rule for testing:
+    // match /messages/{document=**} {
+    //   allow read, write: if true;
+    // }
     onSnapshot(q, (snapshot) => {
       messagesList.innerHTML = '';
       snapshot.forEach((doc) => {
